--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,9 +1,46 @@
-h1 {
+.mainHeader {
+    font-size: 2em;
+}
+
+hr {
+    height: 2px;
+    background-color: lime;
+    border: none;
+}
+
+body {
+    background-color: black;
+    color: lime;
+    font-family: 'Lacquer', cursive;
+    font-size: 1.5rem;
+}
+
+
+.block {
+    /*border: 5px solid;*/
+    margin: 20px;
+    min-height: 100%;
     text-align: center;
 }
 
-.block {
-    border: 5px solid;
-    
+.container {
+    display: flex;
+    justify-content: center;
+    /*background-color: lime;
+    opacity: 0.6;
+    margin: 10px;*/
 }
 
+a {
+    color: lime;
+}
+
+a:hover {
+    color: orange;
+    transform: scale(1.1,1.1)
+}
+
+img {
+    border: 2px ridge;
+    border-radius: 10px;
+}
